--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -9,7 +9,7 @@
 <mat-menu #appMenu="matMenu">
   <button mat-menu-item (click)="editPlaylistDialog(true)">Add</button>
   <button mat-menu-item (click)="editPlaylistDialog(false)" *ngIf="selected">Edit</button>
-  <button mat-menu-item (click)="deletePlaylist()">Remove</button>
+  <button mat-menu-item (click)="deletePlaylist()" *ngIf="selected">Remove</button>
 </mat-menu>
 
 <button mat-icon-button [matMenuTriggerFor]="appMenu" *ngIf="auth.isLoggedIn()">
