--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="navbar navbar-shadow" color="primary">
-  <img src="assets/logo.png" style="height: 80%;margin-bottom: 0">
+  PIBUI&nbsp;&nbsp;
+  <a mat-button href="https://forum.pibui.org" target="_blank">Forum</a>
   <span class="spacer"></span>
   <button mat-icon-button (click)="button.click()" *ngFor="let button of buttons">
     <mat-icon>{{ button.icon }}</mat-icon>
@@ -8,8 +9,17 @@
     <mat-icon>input</mat-icon>&nbsp;
     <span i18n>Register/Sign-in</span>
   </button>
-  <button mat-button (click)="logout()" *ngIf="auth.isLoggedIn()">
+  <button mat-icon-button [matMenuTriggerFor]="appMenu" *ngIf="auth.isLoggedIn()">
+    <mat-icon aria-label="Account">account_circle</mat-icon>
+  </button>
+</mat-toolbar>
+<mat-menu #appMenu="matMenu">
+  <button mat-menu-item disabled>
+    <mat-icon>settings</mat-icon>&nbsp;
+    <span i18n>Settings</span>
+  </button>
+  <button mat-menu-item (click)="logout()">
     <mat-icon>power_settings_new</mat-icon>&nbsp;
     <span i18n>Logout</span>
   </button>
-</mat-toolbar>
+</mat-menu>
