--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 <!-- TODO: Sticky footer -->
 <mat-toolbar class="footer" color="primary">
-  <a mat-button href="https://cracrayol.org" i18n>copyright</a>
+  <a mat-button href="https://cracrayol.org" i18n>&copy; cracrayol / 2012-{{ currentDate | date:'yyyy'}}</a>
   <span class="spacer"></span>
-  <a mat-button href="https://framagit.org/cracrayol/pibui" i18n>Source Code</a>
+  <a mat-button href="https://framagit.org/pibui" i18n>Source Code</a>
 </mat-toolbar>
