--- a/src/app/components/confirmDialog/confirmDialog.component.html
+++ b/src/app/components/confirmDialog/confirmDialog.component.html
@@ -1,5 +1,5 @@
 {{ dialogText }}
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close i18n>Cancel</button>
-  <button mat-button (click)="valid()" i18n>OK</button>
+  <button mat-raised-button mat-dialog-close i18n>Cancel</button>
+  <button mat-raised-button color="primary" (click)="valid()" i18n>OK</button>
 </mat-dialog-actions>
