--- a/src/app/components/editplaylist/editplaylist.component.html
+++ b/src/app/components/editplaylist/editplaylist.component.html
@@ -1,13 +1,15 @@
+<h1 mat-dialog-title *ngIf="playlist === null; else editTitle" i18n>Add playlist</h1>
+<ng-template #editTitle><h1 mat-dialog-title i18n>Edit playlist</h1></ng-template>
 <form [formGroup]="playlistForm">
   <div fxLayout="column" fxLayoutAlign="center">
     <mat-form-field>
-      <input matInput placeholder="Playlist name" formControlName="name">
+      <input matInput i18n-placeholder placeholder="Name" formControlName="name">
     </mat-form-field>
-    <mat-checkbox formControlName="public" i18n>Playlist is Public</mat-checkbox>
+    <mat-checkbox formControlName="public" i18n>The playlist is public</mat-checkbox>
   </div>
 </form>
 
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close i18n>Cancel</button>
-  <button mat-button (click)="save()" i18n>Save</button>
+  <button mat-raised-button mat-dialog-close i18n>Cancel</button>&nbsp;
+  <button mat-raised-button color="primary" (click)="save()" i18n>Save</button>
 </mat-dialog-actions>
