--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -5,7 +5,7 @@
   <mat-tab i18n-label label="Movies">
     <mat-list style="flex-grow: 1; overflow: auto">
       <mat-list-item i18n *ngIf="showLatest">Movies newly added:</mat-list-item>
-      <mat-list-item i18n *ngIf="searching"><mat-spinner diameter="25"></mat-spinner>&nbsp;<span i18n>Searching...</span></mat-list-item>
+      <mat-list-item *ngIf="searching"><mat-spinner diameter="25"></mat-spinner>&nbsp;<span i18n>Searching...</span></mat-list-item>
       <mat-list-item *ngFor="let item of $data | async">
         <img matListAvatar src="https://i1.ytimg.com/vi/{{item.linkId}}/mqdefault.jpg">
         <h3 matLine> {{item.title}} </h3>
