Fix typo for register button

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -40,5 +40,5 @@
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close i18n>Cancel</button>
   <button mat-raised-button color="primary" (click)="login()" i18n *ngIf="loginTab.isActive">Login</button>
-  <button mat-raised-buttonn color="primary" (click)="register()" i18n *ngIf="registerTab.isActive">Register</button>
+  <button mat-raised-button color="primary" (click)="register()" i18n *ngIf="registerTab.isActive">Register</button>
 </mat-dialog-actions>
