--- a/src/app/containers/mainPage/mainPage.component.html
+++ b/src/app/containers/mainPage/mainPage.component.html
@@ -14,7 +14,7 @@
       </header>
       <div fxLayout="row" fxLayoutAlign="center">
         <div fxFlex.gt-lg="1220px" fxFlex="80%" class="embed-responsive embed-responsive-16by9">
-          <div id="ytplayer"></div>
+          <youtube-player (stateChange)="onStateChange($event)" (error)="onError($event)"></youtube-player>
         </div>
       </div>
     </div>
