--- a/src/app/containers/mainPage/mainPage.component.html
+++ b/src/app/containers/mainPage/mainPage.component.html
@@ -1,6 +1,7 @@
 <pbi-navbar [buttons]="headerButtons"></pbi-navbar>
 <mat-sidenav-container>
-  <mat-sidenav #tagspanel [mode]="isMobile ? 'over' : 'side'" style="width: 300px" class="navbar-shadow" [opened]="!isMobile" [disableClose]="!isMobile">
+  <mat-sidenav #tagspanel [mode]="isMobile ? 'over' : 'side'" style="width: 300px" class="navbar-shadow"
+    [opened]="!isMobile" [disableClose]="!isMobile">
     <pbi-tags [tags]="movie?.tags"></pbi-tags>
   </mat-sidenav>
   <mat-sidenav #searchpanel position="end" mode="over" style="width: 340px">
@@ -8,9 +9,25 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <div fxLayout="column" fxLayoutAlign="center">
-      <header fxLayout="column" fxLayoutAlign="center center">
-        <h2 class="alt" id='movieTitle'>{{ movieTitle }}</h2>
-        <h4 class="alt" id='movieSubtitle' *ngIf="movieSubtitle">{{ movieSubtitle }}</h4>
+      <header>
+        <div *ngIf="!movie" fxLayout="row" fxLayoutAlign="center center">
+          <h2 class="alt" id='movieTitle' i18n>Loading...</h2>
+        </div>
+        <div *ngIf="movie" fxLayout="row" fxLayoutAlign="center center">
+          <h2 class="alt" id='movieTitle'><a (click)='searchAuthor()'>{{ movie.author.name }}</a></h2>
+          <a mat-icon-button i18n-matTooltip matTooltip="Edit author" (click)='editAuthor()'
+            *ngIf="this.auth.getUser() && this.auth.getUser().isAdmin" color="primary">
+            <mat-icon>edit</mat-icon>
+          </a>
+          <h2 class="alt" id='movieTitle'> - {{ movie.title }}</h2>
+          <a mat-icon-button i18n-matTooltip matTooltip="Edit movie" (click)='editMovie()'
+            *ngIf="this.auth.getUser() && this.auth.getUser().isAdmin" color="primary">
+            <mat-icon>edit</mat-icon>
+          </a>
+        </div>
+        <div fxLayout="row" fxLayoutAlign="center center">
+          <h4 class="alt" id='movieSubtitle' *ngIf="movieSubtitle">{{ movieSubtitle }}</h4>
+        </div>
       </header>
       <div fxLayout="row" fxLayoutAlign="center">
         <div fxFlex.gt-lg="1220px" fxFlex="80%" class="embed-responsive embed-responsive-16by9">
