--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,13 +3,13 @@
     <p i18n>
       In order to connect, please enter your email and password.
     </p>
-    <form [formGroup]="loginForm" fxLayout="column">
-      <mat-form-field fxFlex="1" appearance="standard">
+    <form [formGroup]="loginForm" class="flex flex-col">
+      <mat-form-field class="basis-4" appearance="standard">
         <mat-label i18n>Email</mat-label>
         <input matInput formControlName="email">
       </mat-form-field>
       <br>
-      <mat-form-field fxFlex="1" appearance="standard">
+      <mat-form-field class="basis-4" appearance="standard">
           <mat-label i18n>Password</mat-label>
         <input matInput type="password" formControlName="password">
       </mat-form-field>
@@ -19,18 +19,18 @@
     <p i18n>
       In order to connect, please enter your email and password.
     </p>
-    <form [formGroup]="registerForm" fxLayout="column">
-      <mat-form-field fxFlex="1" appearance="standard">
+    <form [formGroup]="registerForm" class="flex flex-col">
+      <mat-form-field class="basis-4" appearance="standard">
           <mat-label i18n>Email</mat-label>
         <input matInput formControlName="email">
       </mat-form-field>
       <br>
-      <mat-form-field fxFlex="1" appearance="standard">
+      <mat-form-field class="basis-4" appearance="standard">
           <mat-label i18n>Password</mat-label>
         <input matInput type="password" formControlName="password">
       </mat-form-field>
       <br>
-      <mat-form-field fxFlex="1" appearance="standard">
+      <mat-form-field class="basis-4" appearance="standard">
           <mat-label i18n>Repeat password</mat-label>
         <input matInput type="password" formControlName="passwordCheck">
       </mat-form-field>
