--- a/src/app/components/moviedialog/moviedialog.component.html
+++ b/src/app/components/moviedialog/moviedialog.component.html
@@ -1,23 +1,23 @@
 <h1 mat-dialog-title *ngIf="movie === null; else editMovie" i18n>Add movie</h1>
 <ng-template #editMovie><h1 mat-dialog-title i18n>Edit movie</h1></ng-template>
 <form [formGroup]="movieForm">
-  <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="10px">
-    <mat-form-field fxFlex="1 1 50%">
+  <div class="flex flex-row justify-center gap-2.5">
+    <mat-form-field class="grow shrink basis-1/2">
       <input matInput i18n-placeholder placeholder="Title" formControlName="title">
     </mat-form-field>
-    <mat-form-field fxFlex="1 1 50%">
+    <mat-form-field class="grow shrink basis-1/2">
       <input matInput i18n-placeholder placeholder="Subtitle" formControlName="subtitle">
     </mat-form-field>
   </div>
-  <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="10px">
-    <mat-form-field fxFlex="1 1 50%">
+  <div lass="flex flex-row justify-center gap-2.5">
+    <mat-form-field class="grow shrink basis-1/2">
       <input matInput i18n-placeholder placeholder="Author" formControlName="author" [matAutocomplete]="auto">
     </mat-form-field>
-    <mat-form-field fxFlex="1 1 50%">
+    <mat-form-field class="grow shrink basis-1/2">
       <input matInput i18n-placeholder placeholder="Link ID" formControlName="linkId">
     </mat-form-field>
   </div>
-  <div fxLayout="row" fxLayoutAlign="start">
+  <div lass="flex flex-row justify-start">
     <mat-checkbox formControlName="valid" i18n>The movie is valid/visible</mat-checkbox>
   </div>
 </form>
