--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 @use "sass:math";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* You can add global styles to this file, and also import other style files */
 
 @import url("https://fonts.googleapis.com/css?family=Roboto");
