Update to Angular 16

--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,34 +1,36 @@
-<mat-tab-group [dynamicHeight]="true">
-    <mat-tab i18n-label label="Change Password" #changePasswordTab>
-      <p i18n>
-        You can change your password here.
-      </p>
-      <form [formGroup]="passwordForm" class="flex flex-col">
-        <mat-form-field class="basis-4" appearance="standard">
-          <mat-label i18n>Current password</mat-label>
-          <input matInput type="password" formControlName="currentPassword">
-        </mat-form-field>
-        <br>
-        <mat-form-field class="basis-4" appearance="standard">
-            <mat-label i18n>New Password</mat-label>
-          <input matInput type="password" formControlName="newPassword">
-        </mat-form-field>
-        <br>
-        <mat-form-field class="basis-4" appearance="standard">
-            <mat-label i18n>Repeat password</mat-label>
-            <input matInput type="password" formControlName="newPasswordCheck">
-        </mat-form-field>
-      </form>
-    </mat-tab>
-    <mat-tab i18n-label label="Delete Account" #deletionTab>
-      <p i18n>
-        You can choose to delete your account. By deleting your account, all your informations will be deleted and will not be recoverable.
-      </p>
-      <form [formGroup]="deletionForm" class="flex flex-col">
-          <mat-checkbox class="basis-4" color="warn" formControlName="validDeletion" #confirmDelete i18n>I confirm the deletion of my account!</mat-checkbox>
+<mat-dialog-content>
+  <mat-tab-group [dynamicHeight]="true">
+      <mat-tab i18n-label label="Change Password" #changePasswordTab>
+        <p i18n>
+          You can change your password here.
+        </p>
+        <form [formGroup]="passwordForm" class="flex flex-col">
+          <mat-form-field class="basis-4">
+            <mat-label i18n>Current password</mat-label>
+            <input matInput type="password" formControlName="currentPassword">
+          </mat-form-field>
+          <br>
+          <mat-form-field class="basis-4">
+              <mat-label i18n>New Password</mat-label>
+            <input matInput type="password" formControlName="newPassword">
+          </mat-form-field>
+          <br>
+          <mat-form-field class="basis-4">
+              <mat-label i18n>Repeat password</mat-label>
+              <input matInput type="password" formControlName="newPasswordCheck">
+          </mat-form-field>
         </form>
-    </mat-tab>
-  </mat-tab-group>
+      </mat-tab>
+      <mat-tab i18n-label label="Delete Account" #deletionTab>
+        <p i18n>
+          You can choose to delete your account. By deleting your account, all your informations will be deleted and will not be recoverable.
+        </p>
+        <form [formGroup]="deletionForm" class="flex flex-col">
+            <mat-checkbox class="basis-4" color="warn" formControlName="validDeletion" #confirmDelete i18n>I confirm the deletion of my account!</mat-checkbox>
+          </form>
+      </mat-tab>
+    </mat-tab-group>
+  </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-raised-button mat-dialog-close i18n>Cancel</button>
     <button mat-raised-button color="primary" i18n *ngIf="changePasswordTab.isActive" (click)="changePassword()">Change password</button>
