--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 <mat-toolbar class="footer" color="primary">
   <a mat-button href="https://cracrayol.org" i18n>&copy; cracrayol / 2012-{{ currentDate | date:'yyyy'}}</a>
   <span class="spacer"></span>
-  <a mat-button href="https://framagit.org/pibui" i18n>Source Code</a>
+  <a mat-button href="https://github.com/cracrayol/pibui_front" i18n>Source Code</a>
   <a mat-button (click)="openLegalNotice()" i18n>Legal Notice</a>
 </mat-toolbar>
