--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,42 +1,44 @@
-<mat-tab-group [dynamicHeight]="true">
-  <mat-tab i18n-label label="Login" #loginTab>
-    <p i18n>
-      In order to connect, please enter your email and password.
-    </p>
-    <form [formGroup]="loginForm" class="flex flex-col">
-      <mat-form-field class="basis-4" appearance="standard">
-        <mat-label i18n>Email</mat-label>
-        <input matInput formControlName="email">
-      </mat-form-field>
-      <br>
-      <mat-form-field class="basis-4" appearance="standard">
-          <mat-label i18n>Password</mat-label>
-        <input matInput type="password" formControlName="password">
-      </mat-form-field>
-    </form>
-  </mat-tab>
-  <mat-tab i18n-label label="Sign-up" #registerTab>
-    <p i18n>
-      In order to connect, please enter your email and password.
-    </p>
-    <form [formGroup]="registerForm" class="flex flex-col">
-      <mat-form-field class="basis-4" appearance="standard">
+<mat-dialog-content>
+  <mat-tab-group [dynamicHeight]="true">
+    <mat-tab i18n-label label="Login" #loginTab>
+      <p i18n>
+        In order to connect, please enter your email and password.
+      </p>
+      <form [formGroup]="loginForm" class="flex flex-col">
+        <mat-form-field class="basis-4">
           <mat-label i18n>Email</mat-label>
-        <input matInput formControlName="email">
-      </mat-form-field>
-      <br>
-      <mat-form-field class="basis-4" appearance="standard">
-          <mat-label i18n>Password</mat-label>
-        <input matInput type="password" formControlName="password">
-      </mat-form-field>
-      <br>
-      <mat-form-field class="basis-4" appearance="standard">
-          <mat-label i18n>Repeat password</mat-label>
-        <input matInput type="password" formControlName="passwordCheck">
-      </mat-form-field>
-    </form>
-  </mat-tab>
-</mat-tab-group>
+          <input matInput formControlName="email">
+        </mat-form-field>
+        <br>
+        <mat-form-field class="basis-4">
+            <mat-label i18n>Password</mat-label>
+          <input matInput type="password" formControlName="password">
+        </mat-form-field>
+      </form>
+    </mat-tab>
+    <mat-tab i18n-label label="Sign-up" #registerTab>
+      <p i18n>
+        In order to connect, please enter your email and password.
+      </p>
+      <form [formGroup]="registerForm" class="flex flex-col">
+        <mat-form-field class="basis-4">
+            <mat-label i18n>Email</mat-label>
+          <input matInput formControlName="email">
+        </mat-form-field>
+        <br>
+        <mat-form-field class="basis-4">
+            <mat-label i18n>Password</mat-label>
+          <input matInput type="password" formControlName="password">
+        </mat-form-field>
+        <br>
+        <mat-form-field class="basis-4">
+            <mat-label i18n>Repeat password</mat-label>
+          <input matInput type="password" formControlName="passwordCheck">
+        </mat-form-field>
+      </form>
+    </mat-tab>
+  </mat-tab-group>
+</mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close i18n>Cancel</button>
   <button mat-raised-button color="primary" (click)="login()" i18n *ngIf="loginTab.isActive">Login</button>
