--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -7,9 +7,9 @@
       <mat-list-item i18n *ngIf="showLatest">Movies newly added:</mat-list-item>
       <mat-list-item *ngIf="searching"><mat-spinner diameter="25"></mat-spinner>&nbsp;<span i18n>Searching...</span></mat-list-item>
       <mat-list-item *ngFor="let item of $data | async">
-        <img matListAvatar src="https://i1.ytimg.com/vi/{{item.linkId}}/mqdefault.jpg">
-        <h3 matLine> {{item.title}} </h3>
-        <p matLine>
+        <img matListItemAvatar src="https://i1.ytimg.com/vi/{{item.linkId}}/mqdefault.jpg">
+        <h3 matListItemTitle> {{item.title}} </h3>
+        <p matListItemLine>
           <span>{{item.author.name}}</span>
         </p>
         <button mat-icon-button (click)="play(item.id)">
