--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -17,15 +17,15 @@
 </button>
 <mat-list style="flex-grow: 1; overflow: auto">
   <mat-list-item *ngFor="let tag of tags">
-    <h3 matLine> {{tag.name}} </h3>
+    <h3 matListItemTitle> {{tag.name}} </h3>
     <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 2) ? 'accent' : ''" (click)="set(tag.id, 2)">
-      <mat-icon>favorite</mat-icon>
+      <mat-icon aria-label="Mandatory">favorite</mat-icon>
     </button>
     <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 1) ? 'accent' : ''" (click)="set(tag.id, 1)">
-      <mat-icon>help</mat-icon>
+      <mat-icon aria-label="Optional">help</mat-icon>
     </button>
     <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 0) ? 'accent' : ''" (click)="set(tag.id, 0)">
-      <mat-icon>block</mat-icon>
+      <mat-icon aria-label="Forbidden">block</mat-icon>
     </button>
   </mat-list-item>
 </mat-list>
