Remove empty SCSS files Add admin base Small changes

--- a/src/app/components/confirmDialog/confirmDialog.component.html
+++ b/src/app/components/confirmDialog/confirmDialog.component.html
@@ -1,4 +1,6 @@
-{{ dialogText }}
+<mat-dialog-content>
+  {{ dialogText }}
+</mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close i18n>Cancel</button>
   <button mat-raised-button color="primary" (click)="valid()" i18n>OK</button>
