--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,22 +1,21 @@
-<mat-form-field style="width:97%;padding-left:3%; margin-top: 8px">
+<mat-form-field class="p-4 w-full">
   <input matInput i18n-placeholder placeholder="Search" value="" #searchValue>
 </mat-form-field>
 <mat-tab-group>
   <mat-tab i18n-label label="Movies">
-    <mat-list style="flex-grow: 1; overflow: auto">
+    <mat-action-list style="flex-grow: 1; overflow: auto">
       <mat-list-item i18n *ngIf="showLatest">Movies newly added:</mat-list-item>
       <mat-list-item *ngIf="searching"><mat-spinner diameter="25"></mat-spinner>&nbsp;<span i18n>Searching...</span></mat-list-item>
-      <mat-list-item *ngFor="let item of $data | async">
-        <img matListItemAvatar src="https://i1.ytimg.com/vi/{{item.linkId}}/mqdefault.jpg">
-        <h3 matListItemTitle> {{item.title}} </h3>
-        <p matListItemLine>
-          <span>{{item.author.name}}</span>
-        </p>
-        <button mat-icon-button (click)="play(item.id)">
-          <mat-icon>{{ selectionIcon }}</mat-icon>
-        </button>
+      <mat-list-item *ngFor="let item of $data | async" (click)="play(item.id)" #item (mouseenter)="item.isOver = true" (mouseleave)="item.isOver = false">
+        <img matListItemAvatar src="https://i1.ytimg.com/vi/{{item.linkId}}/mqdefault.jpg" [ngClass]="{'animate-spin': item.isOver}">
+        <span matListItemTitle>{{item.title}}</span>
+        <span matListItemLine>{{item.author.name}}</span>
       </mat-list-item>
-    </mat-list>
+    </mat-action-list>
   </mat-tab>
-  <mat-tab i18n-label label="Playlists"></mat-tab>
+  <mat-tab i18n-label label="Playlists">
+    <mat-action-list style="flex-grow: 1; overflow: auto">
+      <mat-list-item i18n>Not implemented...</mat-list-item>
+    </mat-action-list>
+  </mat-tab>
 </mat-tab-group>
