--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -1,31 +1,36 @@
-<mat-form-field style="width:80%;padding-left:3%; margin-top: 8px" *ngIf="auth.isLoggedIn()">
-  <mat-select i18n-placeholder placeholder="Playlist" [value]="selected" (selectionChange)="selectPlaylist($event)">
-    <mat-option i18n>None</mat-option>
-    <mat-option *ngFor="let pl of $playlist | async" [value]="pl">
-      {{ pl.name }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-menu #appMenu="matMenu">
-  <button mat-menu-item (click)="editPlaylistDialog(true)" i18n>Create</button>
-  <button mat-menu-item (click)="editPlaylistDialog(false)" *ngIf="selected" i18n>Edit</button>
-  <button mat-menu-item (click)="deletePlaylist()" *ngIf="selected" i18n>Remove</button>
-</mat-menu>
+<div class="flex flex-row m-2">
+  <mat-form-field *ngIf="auth.isLoggedIn()" class="grow">
+    <mat-select i18n-placeholder placeholder="Playlist" [value]="selected" (selectionChange)="selectPlaylist($event)">
+      <mat-option i18n>None</mat-option>
+      <mat-option *ngFor="let pl of $playlist | async" [value]="pl">
+        {{ pl.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 
-<button mat-icon-button [matMenuTriggerFor]="appMenu" *ngIf="auth.isLoggedIn()">
-  <mat-icon>more_vert</mat-icon>
-</button>
+  <mat-menu #appMenu="matMenu">
+    <button mat-menu-item (click)="editPlaylistDialog(true)" i18n>Create</button>
+    <button mat-menu-item (click)="editPlaylistDialog(false)" *ngIf="selected" i18n>Edit</button>
+    <button mat-menu-item (click)="deletePlaylist()" *ngIf="selected" i18n>Remove</button>
+  </mat-menu>
+  <button mat-icon-button [matMenuTriggerFor]="appMenu" *ngIf="auth.isLoggedIn()">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+</div>
+
 <mat-list style="flex-grow: 1; overflow: auto">
   <mat-list-item *ngFor="let tag of tags">
-    <h3 matListItemTitle> {{tag.name}} </h3>
-    <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 2) ? 'accent' : ''" (click)="set(tag.id, 2)">
-      <mat-icon aria-label="Mandatory">favorite</mat-icon>
-    </button>
-    <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 1) ? 'accent' : ''" (click)="set(tag.id, 1)">
-      <mat-icon aria-label="Optional">help</mat-icon>
-    </button>
-    <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 0) ? 'accent' : ''" (click)="set(tag.id, 0)">
-      <mat-icon aria-label="Forbidden">block</mat-icon>
-    </button>
+    <span class="flex flex-row items-center">
+      <label class="grow truncate" [title]="tag.name">{{tag.name}}</label>
+      <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 2) ? 'accent' : ''" (click)="set(tag, 2)">
+        <mat-icon aria-label="Mandatory">favorite</mat-icon>
+      </button>
+      <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 1) ? 'accent' : ''" (click)="set(tag, 1)">
+        <mat-icon aria-label="Optional">help</mat-icon>
+      </button>
+      <button mat-icon-button [disabled]="!auth.isLoggedIn() || !selected" [color]="isTagSet(tag.id, 0) ? 'accent' : ''" (click)="set(tag, 0)">
+        <mat-icon aria-label="Forbidden">block</mat-icon>
+      </button>
+    </span>
   </mat-list-item>
 </mat-list>
