--- a/src/app/components/admin/manage-author/manage-author.component.html
+++ b/src/app/components/admin/manage-author/manage-author.component.html
@@ -6,12 +6,12 @@
     <span class="grow"></span>
     <button mat-fab extended color="primary" class="self-center">
         <mat-icon>add</mat-icon>
-        Add movie
+        Add Author
     </button>
 </div>
   
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="data" matSort [matSortActive]="'movie.id'" [matSortDirection]="'asc'">
+    <table mat-table [dataSource]="data" matSort [matSortActive]="'author.id'" [matSortDirection]="'asc'">
 
         <!-- ID Column -->
         <ng-container matColumnDef="id">
@@ -19,32 +19,26 @@
             <td mat-cell *matCellDef="let row"> {{row.id}} </td>
         </ng-container>
 
-        <!-- Title Column -->
-        <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.title">Title</th>
-            <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.title">Name</th>
+            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
         </ng-container>
 
-        <!-- Subtitle Column -->
-        <ng-container matColumnDef="subtitle">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.subtitle">Subtitle</th>
-            <td mat-cell *matCellDef="let row"> {{row.subtitle}} </td>
-        </ng-container>
-
-        <!-- Author Column -->
-        <ng-container matColumnDef="author">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.author.name">Author</th>
-            <td mat-cell *matCellDef="let row"> {{row.author.name}} </td>
+        <!-- Subname Column -->
+        <ng-container matColumnDef="subname">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.subtitle">Subname</th>
+            <td mat-cell *matCellDef="let row"> {{row.subname}} </td>
         </ng-container>
 
         <!-- Buttons Column -->
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let row">
-                <a mat-icon-button i18n-matTooltip matTooltip="Edit movie" (click)='editMovie(row)' color="primary">
+                <a mat-icon-button i18n-matTooltip matTooltip="Edit author" (click)='editAuthor(row)' color="primary">
                     <mat-icon>edit</mat-icon>
                 </a>
-                <a mat-icon-button i18n-matTooltip matTooltip="Delete movie" (click)='deleteMovie(row)' color="primary">
+                <a mat-icon-button i18n-matTooltip matTooltip="Delete author" (click)='deleteAuthor(row)' color="primary">
                     <mat-icon>delete</mat-icon>
                 </a>
             </td>
@@ -59,5 +53,5 @@
         </tr>
     </table>
 
-    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of authors"></mat-paginator>
 </div>
