--- a/src/app/shared/components/settings/settings.component.html
+++ b/src/app/shared/components/settings/settings.component.html
@@ -26,7 +26,7 @@
           You can choose to delete your account. By deleting your account, all your informations will be deleted and will not be recoverable.
         </p>
         <form [formGroup]="deletionForm" class="flex flex-col">
-            <mat-checkbox class="basis-4" color="warn" formControlName="validDeletion" #confirmDelete i18n>I confirm the deletion of my account!</mat-checkbox>
+            <mat-checkbox class="basis-4" color="warn" formControlName="validDeletion" [(ngModel)]="deleteChecked" i18n>I confirm the deletion of my account!</mat-checkbox>
           </form>
       </mat-tab>
     </mat-tab-group>
@@ -34,5 +34,5 @@
   <mat-dialog-actions>
     <button mat-raised-button mat-dialog-close i18n>Cancel</button>
     <button mat-raised-button color="primary" i18n *ngIf="changePasswordTab.isActive" (click)="changePassword()">Change password</button>
-    <button mat-raised-button color="warn" i18n *ngIf="deletionTab.isActive" [disabled]="!confirmDelete.checked" (click)="deleteAccount()">Delete</button>
+    <button mat-raised-button color="warn" i18n *ngIf="deletionTab.isActive" [disabled]="!deleteChecked" (click)="deleteAccount()">Delete</button>
   </mat-dialog-actions>
