Fix module imports Set sticky footer Add movie/author creation

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,12 +4,12 @@
     <mat-tab-group>
       <mat-tab i18n-label label="Movies">
         <div class="flex flex-row justify-center">
-          <pbi-manage-movie></pbi-manage-movie>
+          <pbi-manage-movie class="grow m-8"></pbi-manage-movie>
         </div>
       </mat-tab>
       <mat-tab i18n-label label="Authors">
         <div class="flex flex-row justify-center">
-          <pbi-manage-author></pbi-manage-author>
+          <pbi-manage-author class="grow m-8"></pbi-manage-author>
         </div>
       </mat-tab>
     </mat-tab-group>
