--- a/src/app/admin/components/manage-author/manage-author.component.html
+++ b/src/app/admin/components/manage-author/manage-author.component.html
@@ -53,5 +53,5 @@
         </tr>
     </table>
 
-    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of authors"></mat-paginator>
+    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true" aria-label="Select page of authors"></mat-paginator>
 </div>
