--- a/src/app/admin/components/manage-movie/manage-movie.component.html
+++ b/src/app/admin/components/manage-movie/manage-movie.component.html
@@ -59,5 +59,5 @@
         </tr>
     </table>
 
-    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" [showFirstLastButtons]="true" aria-label="Select page of users"></mat-paginator>
 </div>
