Admin: Move to standalone components/control flow

--- a/src/app/admin/components/movie-dialog/movie-dialog.component.html
+++ b/src/app/admin/components/movie-dialog/movie-dialog.component.html
@@ -1,5 +1,8 @@
-<h1 mat-dialog-title *ngIf="movie.id === undefined; else editMovie" i18n>Add movie</h1>
-<ng-template #editMovie><h1 mat-dialog-title i18n>Edit movie</h1></ng-template>
+@if(movie.id === undefined) {
+  <h1 mat-dialog-title i18n>Add movie</h1>
+} @else {
+  <h1 mat-dialog-title i18n>Edit movie</h1>
+}
 <mat-dialog-content>
   <form [formGroup]="movieForm">
     <div class="flex flex-row justify-center gap-2.5">
@@ -26,20 +29,24 @@
       <mat-form-field class="grow basis-1">
         <mat-label i18n>Tags</mat-label>
         <mat-chip-grid #chipGrid>
-          <mat-chip-row *ngFor="let tag of movie.tags">
-            {{tag.name}}
-            <button matChipRemove [attr.aria-label]="'remove ' + tag.name" (click)="removeTag(tag)">
-              <mat-icon>cancel</mat-icon>
-            </button>
-          </mat-chip-row>
+          @for(tag of movie.tags; track tag.name) {
+            <mat-chip-row>
+              {{tag.name}}
+              <button matChipRemove [attr.aria-label]="'remove ' + tag.name" (click)="removeTag(tag)">
+                <mat-icon>cancel</mat-icon>
+              </button>
+            </mat-chip-row>
+          }
           <input placeholder="New tag" #tagInput formControlName="tag"
             [matChipInputFor]="chipGrid" [matAutocomplete]="autoTags"
             [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
             (matChipInputTokenEnd)="addTag($event)"/>
           <mat-autocomplete #autoTags="matAutocomplete" (optionSelected)="addTag($event); tagInput.value = ''">
-            <mat-option *ngFor="let tag of tagsList" [value]="tag">
-              {{tag?.name}}
-            </mat-option>
+            @for(tag of tagsList; track tag.id) {
+              <mat-option [value]="tag">
+                {{tag?.name}}
+              </mat-option>
+            }
           </mat-autocomplete>
         </mat-chip-grid>
       </mat-form-field>
@@ -47,14 +54,17 @@
   </form>
 
   <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayAuthor">
-    <mat-option *ngIf="isLoading" class="is-loading">
-      <mat-spinner diameter="30"></mat-spinner>
-    </mat-option>
-    <ng-container *ngIf="!isLoading">
-      <mat-option *ngFor="let author of filteredAuthors" [value]="author">
-        <span>{{ author.name }}</span>
+    @if(isLoading) {
+      <mat-option class="is-loading">
+        <mat-spinner diameter="30"></mat-spinner>
       </mat-option>
-    </ng-container>
+    } @else {
+      @for(author of filteredAuthors; track author.id) {
+        <mat-option [value]="author">
+          <span>{{ author.name }}</span>
+        </mat-option>
+      }
+    }
   </mat-autocomplete>
 </mat-dialog-content>
 
