--- a/src/app/admin/components/author-dialog/author-dialog.component.html
+++ b/src/app/admin/components/author-dialog/author-dialog.component.html
@@ -1,5 +1,8 @@
-<h1 mat-dialog-title *ngIf="author.id === undefined; else editAuthor" i18n>Add author</h1>
-<ng-template #editAuthor><h1 mat-dialog-title i18n>Edit author</h1></ng-template>
+@if(author.id === undefined) {
+  <h1 mat-dialog-title i18n>Add author</h1>
+} @else {
+  <h1 mat-dialog-title i18n>Edit author</h1>
+}
 <mat-dialog-content>
   <form [formGroup]="authorForm">
     <div class="flex flex-col justify-center gap-2.5">
